1. Displaying stations on cards (in searchstations.html!!! (Some of the stations are "undefined," it will be fixed by Himmat by rewriting the api.

--- a/searchstations.html
+++ b/searchstations.html
@@ -87,20 +87,22 @@
 
       
    
-      <template id="savedStationsTemplate">
-          <div class="card">
-              <h5 class="card-title card-header"></h5>
-              <div class="card-body">
-                  <p>Location: <span class="card-text"></span></p>
-                  <p>Busyness: <span class="card-busy"></span></p>
-                  <p>Address: <span class="card-address"></span></p>
-                  <i class="material-icons">bookmark_border</i>
-                  <a href="#" class="btn btn-primary">Report Incident</a>
-              </div>
-          </div>
-      </template>
-  
-      <div id="savedStations-go-here"></div>
+
+
+      <template id="stationsTemplate">
+        <div class="card">
+            <h5 class="station-title card-header"></h5>
+            <div class="card-body">
+                <p>Location: <span class="station-text"></span></p>
+                <p>Busyness: <span class="staiton-details"></span></p>
+                <p>Address: <span class="station-safety"></span></p>
+                <i class="material-icons">bookmark_border</i>
+                <a href="#" class="btn btn-primary">Report Incident</a>
+            </div>
+        </div>
+    </template>
+
+    <div id="stations-go-here"></div>
 
     <nav id="navbarPlaceholder"></nav>
 
