Displayed routes in the searchroutes.html using API!!!!!

--- a/searchroutes.html
+++ b/searchroutes.html
@@ -49,19 +49,19 @@
       </div>
 
   
-      <template id="savedRoutesTemplate">
-          <div class="card">
-              <h5 class="bus-title card-header"></h5>
-              <div class="card-body"> 
-                  <p class="bus-safetyLevel"></p>
-                  <p class="bus-details"></p>
-                  <p class="bus-busy"></p>
-                  <a href="#" class="btn btn-primary">report Incident</a>
-              </div>
-          </div>
-      </template>
+      <template id="routesTemplate">
+        <div class="card">
+            <h5 class="routes-title card-header"></h5>
+            <div class="card-body">
+                <p>Bus Number: <span class="routes-number"></span></p>
+                <p>safetyLevel: <span class="routes-safetyLevel"></span></p>
+                <i class="material-icons">bookmark_border</i>
+                <a href="#" class="btn btn-primary">Report Incident</a>
+            </div>
+        </div>
+    </template>
 
-      <div id="savedRoutes-go-here"></div>
+      <div id="routes-go-here"></div>
 
     <nav id="navbarPlaceholder"></nav>
 
