front end part of the reporting incidents done. I will work on the back end now.

--- a/searchroutes.html
+++ b/searchroutes.html
@@ -56,7 +56,7 @@
                 <p>Bus Number: <span class="routes-number"></span></p>
                 <p>safetyLevel: <span class="routes-safetyLevel"></span></p>
                 <i class="material-icons">bookmark_border</i>
-                <a href="#" class="btn btn-primary">Report Incident</a>
+                <a href="./incidentReport.html" class="btn btn-primary">Report Incident</a>
             </div>
         </div>
     </template>
@@ -69,6 +69,7 @@
 
     <!-- JS funcs  -->
     <!-- JS funcs  -->
+    <script src="scripts/eachStation.js"></script>
     <script src="scripts/firebaseConfig.js"></script>
     <script src="scripts/login.js"></script>
     <script src="scripts/skeleton.js"></script>
