--- a/searchstations.html
+++ b/searchstations.html
@@ -97,7 +97,7 @@
                 <p>Busyness: <span class="staiton-details"></span></p>
                 <p>Address: <span class="station-safety"></span></p>
                 <i class="material-icons">bookmark_border</i>
-                <a href="#" class="btn btn-primary">Report Incident</a>
+                <button class="btn btn-primary" onclick="saveStationDocumentIDAndRedirect()">Report Incident</button>
             </div>
         </div>
     </template>
@@ -108,16 +108,12 @@
 
         <!-- JS funcs  -->
         <script src="scripts/firebaseConfig.js"></script>
-        <script src="scripts/login.js"></script>
         <script src="scripts/skeleton.js"></script>
         <script src="scripts/station.js"></script>
         <script src="scripts/main.js"></script>
-
-
-
+        <script src="scripts/stationIncidentReport.js"></script>
+        <script src="scripts/eachStation.js"></script>
 
 </body>
 
 </html>
-
-
