show name on mainHTML -himmat

--- a/main.html
+++ b/main.html
@@ -51,7 +51,7 @@
 
     
 
-    <h1 id="user-name" class="display-4">Welcome, <span id="name-goes-here"></span> </h1>
+    <h1 id="user-name" class="display-4">Welcome, <span id="nameGoesHere"></span> </h1>
 
     <p id="limited-to-van">For now, TransitAura is limited to the service area provided by TransLink in Metro Vancouver.
     </p>
