added stn incidents, route safetylvs, route incidents, recently viewed, and some debugging -himmat

--- a/searchstations.html
+++ b/searchstations.html
@@ -80,9 +80,10 @@
     <h1 id="search-stations-h1">Search Your Station</h1>
 
     <div class="dropdown-container">
-        <input type="text" id="dropdownInputStations" class="dropdown-input" placeholder="Search options..." oninput="filterOptions()" onclick="toggleDropdown()">
+        <input type="text" id="dropdownInputStations" class="dropdown-input" placeholder="Search stations..." oninput="filterOptions()" onclick="toggleDropdown()">
         <div id="dropdownOptionsStations" class="dropdown-options"></div>
-      </div>
+    </div>
+    
 
 
       
