--- a/main.html
+++ b/main.html
@@ -66,9 +66,9 @@
 
     
     <div id="recentlyViewedContainer">
-      <h2 id="recent-h2">Recently Viewed</h2>
+      <h2>Recently Viewed Stations</h2>
   </div>
-
+  
 
 
 
