--- a/route.html
+++ b/route.html
@@ -3,49 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Station Page</title>
+  <title>Route Page</title>
+    <!-- Google Icons (Material Design)-->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    
     <!-- Bootstrap if we need it -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-
 
     <!-- Firebase -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script> 
     <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css" />
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
     <!-- Other libs -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/firebaseConfig.js"></script>
-    <script src="scripts/login.js"></script>
-  <script src="scripts/station.js"></script>
-  <script src="scripts/skeleton.js"></script>
+
+  <script src="scripts/firebaseConfig.js"></script>
+  <script src="scripts/login.js"></script>
+  <script src="scripts/routes.js"></script>
   <script src="scripts/recentlyviewed.js"></script>
+  <link rel="stylesheet" href="styles/styles.css">
+
+
 </head>
 <body>
   <nav id="navbarPlaceholder"></nav>
-  <h1 id="stationName">Station Name</h1>
-  <p id="stationNeighborhood">Neighborhood: </p>
-  <p id="stationDescription">Description: </p>
-  <p id="stationFacilities">Facilities: </p>
+  <h1 id="routeName">Route Name</h1>
+  <p id="routeDescription">Description: </p>
   <p id="currentSafetyLevel">Current Safety Level: </p>
   <div class="safety-bar-container">
     <div class="safety-bar">
-        <div class="average-overlay" id="averageOverlay">N/A</div>
+      <div class="average-overlay" id="averageOverlay">N/A</div>
     </div>
-</div>
-<p id="reportMessage"></p> 
-
+  </div>
+  <p id="reportMessage"></p>
 
   <label for="safetyLevelInput">Report Safety Level (1-5):</label>
   <select id="safetyLevelInput">
@@ -58,34 +57,29 @@
   </select>
   <button id="reportSafetyButton">Submit Safety Level</button>
 
-  <p id="reportMessage"></p>
-
   <div id="recentIncidents" class="mt-5">
     <h4>Recent Incidents</h4>
     <div class="incident-list"></div>
-</div>
+  </div>
 
-<button class="btn btn-primary" id="submitReportBtn">Submit an Incident Report</button>
+  <button class="btn btn-primary" id="submitReportBtn">Submit an Incident Report</button>
 
-        <div id="overlay">
-            <div id="overlayContent">
-                <button id="closeOverlay">&times;</button>
-                <h3>Submit an Incident Report</h3>
-                <form id="incidentForm">
-                    <div class="mb-3">
-                        <label for="incidentTitle" class="form-label">Title (Optional)</label>
-                        <input type="text" class="form-control" id="incidentTitle" placeholder="Incident Title">
-                    </div>
-                    <div class="mb-3">
-                        <label for="incidentDetails" class="form-label">Details</label>
-                        <textarea class="form-control" id="incidentDetails" rows="5" placeholder="Provide detailed information about the incident" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit Report</button>
-                </form>
-            </div>
-        </div>
-    </div>
-
-
+  <div id="overlay">
+      <div id="overlayContent">
+          <button id="closeOverlay">&times;</button>
+          <h3>Submit an Incident Report</h3>
+          <form id="incidentForm">
+              <div class="mb-3">
+                  <label for="incidentTitle" class="form-label">Title (Optional)</label>
+                  <input type="text" class="form-control" id="incidentTitle" placeholder="Incident Title">
+              </div>
+              <div class="mb-3">
+                  <label for="incidentDetails" class="form-label">Details</label>
+                  <textarea class="form-control" id="incidentDetails" rows="5" placeholder="Provide detailed information about the incident" required></textarea>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit Report</button>
+          </form>
+      </div>
+  </div>
 </body>
 </html>
