--- a/station.html
+++ b/station.html
@@ -60,6 +60,8 @@
 
   <p id="reportMessage"></p>
 
+  <div id="successMessage" class="success-message"></div>
+
   <div id="recentIncidents" class="mt-5">
     <h4>Recent Incidents</h4>
     <div class="incident-list"></div>
@@ -85,6 +87,8 @@
             </div>
         </div>
     </div>
+
+    
 
 
 </body>
