--- a/searchstations.html
+++ b/searchstations.html
@@ -89,7 +89,7 @@
       
    
 
-
+<!-- ---------------- CARDS TEMPLATE-------------------- -->
       <template id="stationsTemplate">
         <div class="card">
             <h5 class="station-title card-header"></h5>
