--- a/bookmark.html
+++ b/bookmark.html
@@ -42,8 +42,12 @@
 
   <body>
     <div class="back-button-container">
-      <button onclick="goBack()" class="back-button">← Back</button>
-    </div>
+      <a href="main.html">
+      <button>
+          ← Back
+      </button>
+      </a>
+  </div>
     <nav id="navbarPlaceholder"></nav>
 
     <div id="book-mark-heading">
