--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -5,7 +5,7 @@
     <div class="container-fluid d-flex justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-light" href="/afterLogin/bookmark.html">
+          <a class="nav-link text-light" href="/bookmark.html">
             <img id="bookmark-icon" src="media/bookmark.png" alt="Bookmarked Icon" />
           </a>
         </li>
