bookmarks stuff again - not done

--- a/searchstations.html
+++ b/searchstations.html
@@ -115,6 +115,8 @@
         <script src="scripts/main.js"></script>
 
         <script src="scripts/eachStation.js"></script>
+        <script src="scripts/saved.js"></script>
+        <script src="scripts/firebaseConfig.js"></script>
 </body>
 
 </html>
