--- a/bookmark.html
+++ b/bookmark.html
@@ -1,100 +1,143 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>TransitAura-Bookmark</title>
-    <meta name="comp1800 template" content="My 1800 App" />
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+  <title>TransitAura-Bookmark</title>
+  <meta name="comp1800 template" content="My 1800 App" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <!-- Bootstrap if we need it -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
+  <!-- Bootstrap if we need it -->
+  <link
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+    crossorigin="anonymous"
+  />
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"
+  ></script>
 
-    <!-- Firebase -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
-    <link
-      type="text/css"
-      rel="stylesheet"
-      href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css"
-    />
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
+  <!-- Firebase -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.js"></script>
+  <link
+    type="text/css"
+    rel="stylesheet"
+    href="https://www.gstatic.com/firebasejs/ui/4.8.1/firebase-ui-auth.css"
+  />
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
 
-    <!-- Other libs -->
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/styles/styles.css" />
-  </head>
+  <!-- Other libs -->
+  <link
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet"
+  />
+  <link rel="stylesheet" href="/styles/styles.css" />
+</head>
 
-  <body>
-    <div class="back-button-container">
-      <a href="main.html">
-      <button>
-          ← Back
-      </button>
-      </a>
-  </div>
-    <nav id="navbarPlaceholder"></nav>
+<body>
+  <div class="back-button-container">
+    <a href="main.html">
+    <button>
+        ← Back
+    </button>
+    </a>
+</div>
 
-    <div id="book-mark-heading">
-      <h1 id="user-name2" class="display-4">
-        Saved Stations and Routes for
-        <span style="text-align: center" id="name-goes-here"></span>
-      </h1>
+<nav id="navbarPlaceholder"></nav>
+  
+  <div class="container">
+    <h1 id="user-name" class="display-4">Saved Bookmarks for <span id="nameGoesHere"></span> </h1>
+    <!-- Here is container for cards  -->
+    <p> Stations </p>
+    <div class="container">
+        <div id="StationsCardGroup" class="row row-cols-auto">
+        </div>
     </div>
+  </div>
 
-    <h2 id="saved-stations-h2">Saved Stations</h2>
+<div id="stations-go-here"></div>
 
-    <template id="savedStationsTemplate">
-      <div class="card">
-        <h5 class="card-title card-header"></h5>
+<!-- Templates for general use, not displayed -->
+
+            <!-- <template id="stationsTemplate">
+              <div class="card">
+                  <h5 class="station-title card-header"></h5>
+                  <div class="card-body">
+                      <p>Location: <span class="station-text"></span></p>
+                      <p>Busyness: <span class="staiton-details"></span></p>
+                      <p>Address: <span class="station-safety"></span></p>
+                      <i class="material-icons">bookmark_border</i>
+                      <a class="btn btn-primary" onclick="saveStationDocumentIDAndRedirect()">Report Incident</a>
+                  </div>
+              </div>
+          </template> -->
+
+<template id="savedStationsCardTemplate">
+    <div class="card py-2 mx-2 bg-light" style="width: 10rem;">
+        <!-- <img class="card-image card-img-top" src=" ..." alt="..."> -->
         <div class="card-body">
-          <p>Location: <span class="card-text"></span></p>
-          <p>Busyness: <span class="card-busy"></span></p>
-          <p>Address: <span class="card-address"></span></p>
-          <a href="#" class="btn btn-primary">Report Incident</a>
+            <h5 class="card-title">Card title</h5>
+            <i class="material-icons">bookmark_border</i>
+            <br>
+            <!-- <a class="btn btn-secondary card-href" id="read-more">Read more ...</a> -->
         </div>
+    </div>
+</template>
+
+  <!-- <div id="book-mark-heading">
+    <h1 id="user-name2" class="display-4">
+      Saved Stations and Routes for
+      <span style="text-align: center" id="name-goes-here"></span>
+    </h1>
+  </div>
+
+  <h2 id="saved-stations-h2">Saved Stations</h2>
+
+  <template id="savedStationsTemplate">
+    <div class="card">
+      <h5 class="card-title card-header"></h5>
+      <div class="card-body">
+        <p>Location: <span class="card-text"></span></p>
+        <p>Busyness: <span class="card-busy"></span></p>
+        <p>Address: <span class="card-address"></span></p>
+        <a href="#" class="btn btn-primary">Report Incident</a>
       </div>
-    </template>
+    </div>
+  </template>
 
-    <div id="savedStations-go-here"></div>
+  <div id="savedStations-go-here"></div>
 
-    <h2 id="saved-routes-h2">Saved Routes</h2>
+  <h2 id="saved-routes-h2">Saved Routes</h2>
 
-    <template id="savedRoutesTemplate">
-      <div class="card">
-        <h5 class="bus-title card-header"></h5>
-        <div class="card-body">
-          <p class="bus-safetyLevel"></p>
-          <p class="bus-details"></p>
-          <p class="bus-busy"></p>
-          <a href="#" class="btn btn-primary">report Incident</a>
-        </div>
+  <template id="savedRoutesTemplate">
+    <div class="card">
+      <h5 class="bus-title card-header"></h5>
+      <div class="card-body">
+        <p class="bus-safetyLevel"></p>
+        <p class="bus-details"></p>
+        <p class="bus-busy"></p>
+        <a href="#" class="btn btn-primary">report Incident</a>
       </div>
-    </template>
+    </div>
+  </template>
 
-    <div id="savedRoutes-go-here"></div>
+  <div id="savedRoutes-go-here"></div> -->
 
-    <nav id="navbarPlaceholder"></nav>
+  <nav id="navbarPlaceholder"></nav>
 
-    <!-- JS funcs  -->
-    <!-- JS funcs  -->
-    <script src="scripts/firebaseConfig.js"></script>
-    <script src="scripts/login.js"></script>
-    <script src="scripts/skeleton.js"></script>
-  </body>
+  <!-- JS funcs  -->
+  <!-- JS funcs  -->
+  <script src="scripts/firebaseConfig.js"></script>
+  <script src="scripts/login.js"></script>
+  <script src="scripts/skeleton.js"></script>
+  <script src="scripts/saved.js"></script>
+
+  <script src="scripts/eachStation.js"></script>
+</body>
 </html>
