lil frontend -himmat

--- a/aboutus.html
+++ b/aboutus.html
@@ -55,7 +55,8 @@
 
   <body id="body">
     <header>
-      <button onclick="goBack()" class="back-button">← Back</button>
+      <a href="index.html">
+      <button class="back-button">← Back</button></a>
     </header>
 
     <nav id="navbarPlaceholder"></nav>
