--- a/main.html
+++ b/main.html
@@ -67,7 +67,9 @@
     
     <div id="recentlyViewedContainer">
       <h2>Recently Viewed Stations</h2>
+      <div id="recentlyViewedCards"></div>
   </div>
+  
   
 
 
