account details feature that displays users email and name and should (still broken) allow the user to edit and save those changes and have it reflected in firestore

--- a/bookmark.html
+++ b/bookmark.html
@@ -83,7 +83,7 @@
         <!-- <img class="card-image card-img-top" src=" ..." alt="..."> -->
         <div class="card-body">
             <h5 class="card-title">Card title</h5>
-            <i  class="material-icons" onclick="updateBookmark(stationId)">bookmark_border</i>
+            <i  class="material-icons" onclick="updateBookmark(stationId)">bookmark</i>
             <br>
             <!-- <a class="btn btn-secondary card-href" id="read-more">Read more ...</a> -->
         </div>
