--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -25,10 +25,10 @@
   </nav>
 
   <div class="dropup-menu" id="profileDropupMenu">
-    <a href="#">Account Details</a>
+    <a href="./profile.html"><button class="btn btn-outline-light mt-3">Account Details</button></a>
     <a href="#">Account Settings</a>
     <a href="#">Aurapoints</a>
-    <button class="btn btn-outline-light mt-3" onclick="logout()"><a href="../index.html">Logout</a></button>
+    <a href="../index.html"><button class="btn btn-outline-light mt-3" onclick="logout()">Logout</button></a>
     <button class="btn btn-outline-light mt-3" onclick="toggleDropupMenu()">Close</button>
   </div>
   <script>
