profile.js is fixed and can now save the changes and gets reflected in firestore

--- a/profile.html
+++ b/profile.html
@@ -82,7 +82,10 @@
 <br>
 
 <div class="container" id="auraPointsDisplay"> 
-    <h1> Aura Points </h1>
+  <h1> Aura Points </h1>
+    <div id> </div>
+    
+    
 </div>
 
 
