--- a/profile.html
+++ b/profile.html
@@ -82,10 +82,8 @@
 <br>
 
 <div class="container" id="auraPointsDisplay"> 
-  <h1> Aura Points </h1>
-    <div id> </div>
-    
-    
+    <h1> Aura Points </h1>
+    <div id="userAuraPoints"> </div>
 </div>
 
 
