--- a/station.html
+++ b/station.html
@@ -31,6 +31,7 @@
   <script src="scripts/station.js"></script>
   <script src="scripts/skeleton.js"></script>
   <script src="scripts/recentlyviewed.js"></script>
+  <script src="scripts/bookmark.js" defer></script>
 </head>
 <body>
   <nav id="navbarPlaceholder"></nav>
@@ -39,6 +40,10 @@
   <p id="stationDescription">Description: </p>
   <p id="stationFacilities">Facilities: </p>
   <p id="currentSafetyLevel">Current Safety Level: </p>
+
+  <button id="bookmarkButton" class="btn btn-primary">Bookmark Station</button>
+<p id="bookmarkMessage"></p>
+
 
   <p id="reportMessage"></p> 
   <p id="reportMessage"></p>
@@ -94,9 +99,6 @@
     </div>
 
 </div>
-
-    
-
 
 </body>
 </html>
