--- a/station.html
+++ b/station.html
@@ -32,6 +32,7 @@
   <script src="scripts/skeleton.js"></script>
   <script src="scripts/recentlyviewed.js"></script>
   <script src="scripts/bookmark.js" defer></script>
+  <script src="scripts/search.js"></script>
 </head>
 <body>
   <nav id="navbarPlaceholder"></nav>
@@ -41,8 +42,9 @@
   <p id="stationFacilities">Facilities: </p>
   <p id="currentSafetyLevel">Current Safety Level: </p>
 
-  <button id="bookmarkButton" class="btn btn-primary">Bookmark Station</button>
-<p id="bookmarkMessage"></p>
+  <button id="bookmarkButton" class="btn btn-primary">Bookmark</button>
+  <p id="bookmarkMessage" class="mt-2"></p>
+  
 
 
   <p id="reportMessage"></p> 
