fixed the first responder button issue.

--- a/main.html
+++ b/main.html
@@ -61,7 +61,7 @@
   <p>For emergencies:</p>
   <button class="btn btn-danger" onclick="window.location.href='tel:911'">Call 911</button>
   <p>For non-emergencies contact Transit Police directly:</p>
-  <button class="btn btn-primary" onclick="window.location.href='tel:6045158300'">Call Tranist Police/button>
+  <button class="btn btn-primary" onclick="window.location.href='tel:6045158300'">Call Tranist Police</button>
   <button class="btn btn-secondary" onclick="window.location.href='sms:877777'">Text Tranist Police</button>
   <button class="btn btn-outline-light mt-3" onclick="toggleFirstResponderMenu()">Close</button>
 </div>
