--- a/text/nav_after_login.html
+++ b/text/nav_after_login.html
@@ -5,8 +5,8 @@
     <div class="container-fluid d-flex justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link text-light" href="/bookmark.html">
-            <img id="bookmark-icon" src="media/bookmark.png" alt="Bookmarked Icon" />
+          <a class="nav-link text-light" href="/map.html">
+            <img id="bookmark-icon" src="media/map.png" alt="Bookmarked Icon" />
           </a>
         </li>
         <li class="nav-item">
