bug fixes and some frontend

--- a/profile.html
+++ b/profile.html
@@ -43,11 +43,7 @@
 <body>
     
   <div class="back-button-container">
-    <a href="main.html">
-    <button>
-        ← Back
-    </button>
-    </a>
+    <button onclick="window.history.back()">← Back</button>
   </div>
 
   <nav id="navbarPlaceholder"></nav>
