--- a/route.html
+++ b/route.html
@@ -38,6 +38,11 @@
 </head>
 <body>
   <nav id="navbarPlaceholder"></nav>
+
+  <div class="back-button-container">
+    <button onclick="window.history.back()">← Back</button>
+  </div>
+
   <h1 id="routeName">Route Name</h1>
   <p id="routeDescription">Description: </p>
   <p id="currentSafetyLevel">Current Safety Level: </p>
