--- a/station.html
+++ b/station.html
@@ -36,6 +36,11 @@
 </head>
 <body>
   <nav id="navbarPlaceholder"></nav>
+
+  <div class="back-button-container">
+    <button onclick="window.history.back()">← Back</button>
+  </div>
+
   <h1 id="stationName">Station Name</h1>
   <p id="stationNeighborhood">Neighborhood: </p>
   <p id="stationDescription">Description: </p>
@@ -48,7 +53,6 @@
 
 
   <p id="reportMessage"></p> 
-  <p id="reportMessage"></p>
   <div id="successMessage" class="success-message"></div>
 
 <div id="safetyLevel">
