--- a/map.html
+++ b/map.html
@@ -71,10 +71,10 @@
 <main>
     <!-- MAPBOX -->
     <h2>Map View Holder</h2>
-    <div id='map' style='width: 100%; height: 400px;'></div>
+    <div id='map' style='width: 100%; height: 900px;'></div>
     <!-- MAPBOX -->
      
-    <div>
+    <!-- <div>
         <div class="card">
         </div>
         <div class="card-body">
@@ -85,7 +85,7 @@
                 quisquam impedit inventore eos unde perspiciatis nam earum ad rem, nesciunt quam? Laudantium
                 voluptates repellat unde.</p>
         </div>
-    </div>
+    </div> -->
 </main>
 
     <nav id="navbarPlaceholder"></nav>
