--- a/incidentReport.html
+++ b/incidentReport.html
@@ -30,6 +30,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/styles.css">
     <script src="scripts/dropdown.js" defer></script>
+</head>
 
 <body>
     <div class="back-button-container">
